--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,4 +1,6 @@
 .about-container {
+
+  background: rgb(240, 220, 239);
   flex: 1;
   display: flex;
   justify-content: center;
@@ -14,6 +16,11 @@
       height: 80%;
     }
     .description-container {
+      color: white;
+      background-color: rgb(53, 5, 54);
+      padding: 40px 20px; 
+      border-radius: 10px; 
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
       display: flex;
       flex-direction: column;
       align-items: flex-start;
