--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,4 +1,5 @@
 .contact-container {
+  background-color: rgb(239, 239, 249);
   flex: 1;
   display: flex;
   justify-content: center;
@@ -9,7 +10,14 @@
       width: 800px;
     }
   }
+  
+  .form-container {
+    border: 2px solid black;
+    background-color: white;
+  }
+
   form {
+    background-color: white;
     display: flex;
     flex-direction: column;
     button[type='submit'] {
