--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 100px;
-  background-color: #744af6;
+  background-color: #49027b;
   color: white;
   position: sticky;
   top: 0;
