--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -33,6 +33,7 @@
       .contact-me-btn {
         border: solid 1px black;
         padding: 5px;
+        background-color: black;
       }
       p {
         font-size: 1.1rem;
