--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -18,7 +18,7 @@
 .skill-item {
   margin: 10px;
   padding: 10px;
-  border: 1px solid #011b08;
+  border: 1px solid #017c22;
   border-radius: 5px;
   width: 120px;
   text-align: center;
