--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -67,7 +67,19 @@
 
   .hero-background {
     position: relative; 
-    margin-left: 5px; // Move the image 20px to the right
+    margin-left: 5px; 
   }
+
+  @media screen and (max-width: $tablet) {
+    .home-hero {
+      .hero-background {
+        position: relative;
+        margin-top: 20px;
+        width: 100%;  
+        height: 70%; 
+      }
+    }
+  }
+
 }
 
