--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -47,6 +47,10 @@
   margin-bottom: 5px; 
 }
 
+.projects-container .project-item:nth-child(5) .project-image {
+  height: 300px; 
+  margin-bottom: 5px; 
+}
 
 .projects-container .project-item h2 {
   margin-top: 0px; 
