--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,70 +1,101 @@
 .projects-container {
-  background-color: black;
-  flex: 1;
+  background-color: #1e1e1e;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   padding-bottom: 100px;
-  .project-item {
-    padding: 10px;
-    flex-basis: calc(100% - 20px);
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    @media screen and (min-width: $tablet) {
-      flex-basis: calc(50% - 20px);
-    }
-    @media screen and (min-width: $desktop) {
-      flex-basis: calc(33.33% - 20px);
-    }
-    .project-image-container {
-      width: 100%;
-      flex: 1;
-      svg {
-        width: 100%;
-        height: 100%;
-      }
-    }
-    a {
-      text-decoration: underline;
-      color: rgb(253, 253, 253);
-    }
-    a:hover {
-      color:rgb(23, 23, 240);
-    }
+  gap: 20px;
+}
+
+.project-item {
+  background-color: #2c2c2c;
+  padding: 0;
+  flex-basis: calc(100% - 40px);
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(50% - 40px);
+  }
+
+  @media screen and (min-width: 1024px) {
+    flex-basis: calc(33.33% - 40px);
   }
 }
 
-/* Target the second image in the project list */
-.projects-container .project-item:nth-child(2) .project-image {
-  height: 500px; 
-  width: 800px;
-  margin-bottom: 0px; 
+.project-item:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.5);
 }
 
-.projects-container .project-item:nth-child(3) .project-image {
-  height: 500px; 
-  margin-bottom: 5px; 
+.project-image-container {
+  width: 100%;
+  flex: 1;
+  margin-bottom: 0;
 }
 
+.project-image {
+  width: 100%;
+  height: 350px;
+  object-fit: contain;
+  border-radius: 10px 10px 0 0;
+  background-color: #f0f0f0;
+}
+
+.projects-container .project-item:nth-child(2) .project-image,
+.projects-container .project-item:nth-child(3) .project-image,
 .projects-container .project-item:nth-child(5) .project-image {
-  height: 300px; 
-  margin-bottom: 5px; 
+  height: 450px;
+  object-fit: contain;
 }
 
-.projects-container .project-item h2 {
-  margin-top: 0px; 
+.project-item h2 {
+  margin-top: 0;
+  padding: 15px;
+  font-size: 1.5rem;
+  color: #ffffff;
 }
 
-.text-git {
-  color: #ffffff; // White color
+.projects-container .project-item:nth-child(6) h2 {
+  font-size: 2.5rem; /* Make the title even bigger */
+  margin-top: 5px; /* Reduce the gap between the image and title */
+  padding: 10px 15px; /* Adjust padding to maintain balance */
+}
+
+.project-item p {
+  padding: 15px;
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+  color: #dddddd;
+}
+
+a {
+  color: #1e90ff;
+  text-decoration: underline;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: #00bfff;
 }
 
 .icon-container {
-  background-color: #ffffff; // White background
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 450px;
 }
 
 .icon {
-  width: 20px; 
-  height: 20px; 
+  width: 100px;
+  height: 100px;
+  color: #000;
 }
+
