ui/ux enhancement

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,5 +1,5 @@
 .about-container {
-  background: linear-gradient(135deg, #f0dcef, #ffffff);
+  background: linear-gradient(135deg, #fbf4fb, #ffffff);
   flex: 1;
   display: flex;
   justify-content: center;
@@ -21,7 +21,7 @@
   }
 
   .description-container {
-    background-color: #350536;
+    background-color: hsl(240, 11%, 23%);
     color: white;
     padding: 30px;
     border-radius: 12px;
