--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -61,9 +61,9 @@
 }
 
 .projects-container .project-item:nth-child(6) h2 {
-  font-size: 2.5rem; /* Make the title even bigger */
-  margin-top: 5px; /* Reduce the gap between the image and title */
-  padding: 10px 15px; /* Adjust padding to maintain balance */
+  font-size: 3rem; 
+  margin-top: 0px; 
+  padding: 10px 15px; 
 }
 
 .project-item p {
@@ -94,8 +94,8 @@ a:hover {
 }
 
 .icon {
-  width: 100px;
-  height: 100px;
-  color: #000;
+  width: 300px;
+  height: 300px;
+  color: #000000;
 }
 
