--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -49,7 +49,7 @@ h2 {
 
 .subsection-paragraph {
   font-size: 1.2rem;
-  color: #555; /* Slightly darker text for readability */
+  color: #555555; /* Slightly darker text for readability */
   margin-bottom: 20px;
 }
 
@@ -64,7 +64,7 @@ h2 {
 a {
   display: inline-block;
   padding: 12px 30px;
-  background-color: #0077b6; /* Updated blue for more contrast */
+  background-color: #0077b6; 
   color: white;
   border-radius: 25px;
   text-decoration: none;
