--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -21,7 +21,7 @@
   }
 
   .description-container {
-    background-color: hsl(240, 11%, 23%);
+    background-color: #6a77a8;;
     color: white;
     padding: 30px;
     border-radius: 12px;
